# io

./: .clang-format  .color_coded  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  testwrite.cc  write.cc  write.h
io/: CMakeLists.txt  decode.cc  decode.h  encode.cc  encode.h  mask.h  read.cc  read.h  write.cc  write.h
read/: read.h
tests/: CMakeLists.txt  testio.cc  testwrite.cc
write/: CMakeLists.txt  mask.h  read.cc  read.h  write.cc  write.h
