cmake_minimum_required (VERSION 3.1)
project (write)
set (CMAKE_CXX_STANDARD 11)
add_library (write write.cc)
target_compile_definitions (write PUBLIC $<$<CONFIG:Debug>:ENABLE_DEBUG>)
add_executable (testwrite testwrite.cc)
target_link_libraries (testwrite write)
target_compile_definitions (testwrite PUBLIC $<$<CONFIG:Debug>:ENABLE_DEBUG>)
